tooling/nargo_cli/tests/snapshots/execution_success/regression_7612/execute__tests__expanded.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: expanded_code
---
pub struct Data {
    fields: [Field; 1],
    counter: u32,
}

fn main(array: [Data; 1], x: bool) {
    let index: Field = if x { 0 } else { 1 };
    if index != 0 {
        assert(array[index - 1].counter < 3);
    }
}
