tooling/nargo_cli/tests/snapshots/execution_success/regression_7612/execute__tests__force_brillig_false_inliner_9223372036854775807.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "[noir_version]",
  "hash": "[hash]",
  "abi": {
    "parameters": [
      {
        "name": "array",
        "type": {
          "kind": "array",
          "length": 1,
          "type": {
            "kind": "struct",
            "path": "Data",
            "fields": [
              {
                "name": "fields",
                "type": {
                  "kind": "array",
                  "length": 1,
                  "type": {
                    "kind": "field"
                  }
                }
              },
              {
                "name": "counter",
                "type": {
                  "kind": "integer",
                  "sign": "unsigned",
                  "width": 32
                }
              }
            ]
          }
        },
        "visibility": "databus"
      },
      {
        "name": "x",
        "type": {
          "kind": "boolean"
        },
        "visibility": "private"
      }
    ],
    "return_type": null,
    "error_types": {
      "10419109383335261722": {
        "error_kind": "string",
        "string": "attempt to subtract with overflow"
      }
    }
  },
  "bytecode": [
    "func 0",
    "current witness index : _9",
    "private parameters indices : [_0, _1, _2]",
    "public parameters indices : []",
    "return value indices : []",
    "BLACKBOX::RANGE [(_1, 32)] []",
    "BLACKBOX::RANGE [(_2, 1)] []",
    "BRILLIG CALL func 0: inputs: [EXPR [ (-1, _2) 1 ]], outputs: [_3]",
    "EXPR [ (-1, _2, _3) (1, _3) (1, _4) -1 ]",
    "EXPR [ (-1, _2, _4) (1, _4) 0 ]",
    "EXPR [ (1, _2, _4) (-1, _2) (-1, _5) 0 ]",
    "BLACKBOX::RANGE [(_5, 32)] []",
    "INIT CALLDATA 0 (id: 1, len: 2, witnesses: [_0, _1])",
    "EXPR [ (-2, _4, _5) (2, _5) (-1, _6) 1 ]",
    "MEM (id: 1, read at: EXPR [ (1, _6) 0 ], value: EXPR [ (1, _7) 0 ]) ",
    "BRILLIG CALL func 1: inputs: [EXPR [ (1, _7) 4294967293 ], EXPR [ 4294967296 ]], outputs: [_8, _9]",
    "BLACKBOX::RANGE [(_8, 1)] []",
    "BLACKBOX::RANGE [(_9, 32)] []",
    "EXPR [ (1, _7) (-4294967296, _8) (-1, _9) 4294967293 ]",
    "EXPR [ (1, _4, _8) (-1, _8) 0 ]",
    "unconstrained func 0",
    "[Const { destination: Direct(21), bit_size: Integer(U32), value: 1 }, Const { destination: Direct(20), bit_size: Integer(U32), value: 0 }, CalldataCopy { destination_address: Direct(0), size_address: Direct(21), offset_address: Direct(20) }, Const { destination: Direct(2), bit_size: Field, value: 0 }, BinaryFieldOp { destination: Direct(3), op: Equals, lhs: Direct(0), rhs: Direct(2) }, JumpIf { condition: Direct(3), location: 8 }, Const { destination: Direct(1), bit_size: Field, value: 1 }, BinaryFieldOp { destination: Direct(0), op: Div, lhs: Direct(1), rhs: Direct(0) }, Stop { return_data: HeapVector { pointer: Direct(20), size: Direct(21) } }]",
    "unconstrained func 1",
    "[Const { destination: Direct(10), bit_size: Integer(U32), value: 2 }, Const { destination: Direct(11), bit_size: Integer(U32), value: 0 }, CalldataCopy { destination_address: Direct(0), size_address: Direct(10), offset_address: Direct(11) }, BinaryFieldOp { destination: Direct(2), op: IntegerDiv, lhs: Direct(0), rhs: Direct(1) }, BinaryFieldOp { destination: Direct(1), op: Mul, lhs: Direct(2), rhs: Direct(1) }, BinaryFieldOp { destination: Direct(1), op: Sub, lhs: Direct(0), rhs: Direct(1) }, Mov { destination: Direct(0), source: Direct(2) }, Stop { return_data: HeapVector { pointer: Direct(11), size: Direct(10) } }]"
  ],
  "debug_symbols": "[debug_symbols]",
  "file_map": "[file_map]",
  "names": [
    "main"
  ],
  "brillig_names": [
    "directive_invert",
    "directive_integer_quotient"
  ]
}
